--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "webpack --config webpack.dev.js",
     "watch": "webpack --watch --config webpack.dev.js",
-    "prettify": "prettier --write ."
+    "prettify": "prettier --write .",
+    "serve": "webpack serve --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -31,16 +32,18 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.5",
+    "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "lit-html": "^2.3.0",
     "prettier": "2.6.2",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.9",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "dependencies": {}
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.10.0"
+  }
 }
