--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/RedAndBlu/space-fantasy-football#readme",
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "css-loader": "^6.7.1",
@@ -38,7 +39,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
-    "lit-html": "^2.3.0",
     "prettier": "2.6.2",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.9",
@@ -46,5 +46,9 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "lit-html": "^2.3.1",
+    "lodash-es": "^4.17.21"
   }
 }
