--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["describedby", "Improv", "labelledby", "modf"]
+  "cSpell.words": ["describedby", "fixs", "Improv", "labelledby", "modf"]
 }
