add all league fixtures ui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["describedby", "fixs", "Improv", "labelledby", "modf"]
+  "cSpell.words": [
+    "describedby",
+    "fixs",
+    "Improv",
+    "labelledby",
+    "Matchday",
+    "modf"
+  ]
 }
