--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "webpack --config webpack.dev.js",
+    "dev": "webpack --config webpack.dev.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "prettify": "prettier --write .",
-    "serve": "webpack serve --config webpack.dev.js"
+    "serve": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -45,7 +46,8 @@
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.10.0"
+    "webpack-dev-server": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "lit-html": "^2.3.1",
