add sideEffects flag and the usage es6 to register components

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "football",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "test": "jest",
     "dev": "webpack --config webpack.dev.js",
